時刻記録用ボタンの表示を追加

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <p id="nowDateTime"></p>
+    <p><button type=button style="width: 100px; height: 40px; font-size: 20px" onclick="">start</button></p>
     <script>
       function datetostr(date) {
         var weekday = ["sun", "mon", "tue", "wed", "thu", "fri", "sat"];
